The icon provider was not able to find the default icons as they are not located in the icon registry (these icon files cannot directly be included within a distribution due to license restrictions -> but in binary format "compiled"). Thus corrected the resolution path for those icons.
Added the 16pt version of the default data store and data type icons the "compiled" icon files module user_rc.py.

Corrected a small bug in the data store page of the import wizard -> Used the data type icon resolution method of the icon provider instead of the data store method.

--- a/resources/qt4/user.qrc
+++ b/resources/qt4/user.qrc
@@ -95,6 +95,8 @@
     <file>icons/window_options24.png</file>
     <file>icons/print16.png</file>
     <file>icons/print24.png</file>
+    <file>icons/dataStore16.png</file>
+    <file>icons/dataType16.png</file>
   </qresource>
   <qresource prefix="/images" >
     <file>images/DF_Admin_About.png</file>
