Adapted build process as suggested in #662617.
In addition the following has been changed:
-Added global setup.py option "exclude-clients" to provide distribution without GUI modules
-Revised environment variables:
 - No variables have to be explicitly set, in particular you do not have to set DF_START or DF_HOME before starting the user or administrative client
- Image files are distributed using Python modules (generated resource files) instead of adding them explicitly as "image files"
- Removed obsolete directories (lib, projects)
- Distributions contain Epydoc documentation and script examples
- Added file .coverage to ignored files

--- a/resources/qt4/ui/user/main_window.ui
+++ b/resources/qt4/ui/user/main_window.ui
@@ -1715,7 +1715,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="D:/hudson-work/workspace/DataFinder_Nightly_Build_WinXP_32Bit/resources/qt4/user.qrc"/>
+  <include location="../../user.qrc"/>
  </resources>
  <connections>
   <connection>
