--- a/resources/qt4/user.qrc
+++ b/resources/qt4/user.qrc
@@ -1,112 +1,127 @@
 <RCC>
   <qresource prefix="/icons" >
-  	<file>icons/insert_doc24.png</file>
-  	<file>icons/package24.png</file>
-    <file>icons/link16.png</file>
-    <file>icons/migrated16.png</file>
-    <file>icons/cd16.png</file>
-    <file>icons/cross16.png</file>
-    <file>icons/archive16.png</file>
-    <file>icons/DataStoreNew24.png</file>
-    <file>icons/Documentation24.png</file>
-    <file>icons/FlowSolution24.png</file>
-    <file>icons/Geometry24.png</file>
-    <file>icons/GridGeneration24.png</file>
-    <file>icons/Input24.png</file>
-    <file>icons/Mitarbeiter24.png</file>
-    <file>icons/Output24.png</file>
-    <file>icons/Planner24.png</file>
-    <file>icons/Relation24.png</file>
-    <file>icons/about24.png</file>
-    <file>icons/back.png</file>
-    <file>icons/backward.png</file>
-    <file>icons/binoc24.png</file>
-    <file>icons/close_file24.png</file>
-    <file>icons/closewindow24.png</file>
-    <file>icons/connect.png</file>
-    <file>icons/connect24.png</file>
-    <file>icons/console.png</file>
-    <file>icons/copy24.png</file>
-    <file>icons/cut.png</file>
-    <file>icons/dataStore24.png</file>
-    <file>icons/dataType24.png</file>
-    <file>icons/datafinder24.png</file>
-    <file>icons/delete24.png</file>
-    <file>icons/directories24.png</file>
-    <file>icons/disconnect.png</file>
-    <file>icons/disconnect24.png</file>
-    <file>icons/drop_db24.png</file>
-    <file>icons/edit24.png</file>
-    <file>icons/exit24.png</file>
-    <file>icons/export24.png</file>
-    <file>icons/flag24.png</file>
-    <file>icons/forward.png</file>
-    <file>icons/get24.png</file>
-    <file>icons/graph_line_24.png</file>
-    <file>icons/graph_point_24.png</file>
-    <file>icons/hard_drive_24.png</file>
-    <file>icons/help24.png</file>
-    <file>icons/import24.png</file>
-    <file>icons/insert24.png</file>
-    <file>icons/key24.png</file>
-    <file>icons/layer01.png</file>
-    <file>icons/layer02.png</file>
-    <file>icons/layer03.png</file>
-    <file>icons/layer04.png</file>
-    <file>icons/lightning_bolt24.png</file>
-    <file>icons/lightning_bolt_24.png</file>
-    <file>icons/mail24.png</file>
-    <file>icons/mdi_cascade24.png</file>
-    <file>icons/mdi_tilehztl24_h.png</file>
-    <file>icons/mdi_tilevert24_h.png</file>
-    <file>icons/monitor_24.png</file>
-    <file>icons/new24.png</file>
-    <file>icons/newDataStore24.png</file>
-    <file>icons/newDataType24.png</file>
-    <file>icons/newGroup24.png</file>
-    <file>icons/newRelationType24.png</file>
-    <file>icons/newUser24.png</file>
-    <file>icons/newmenu.png</file>
-    <file>icons/open24.png</file>
-    <file>icons/paste.png</file>
-    <file>icons/preferences24.png</file>
-    <file>icons/procedure24.png</file>
-    <file>icons/process24.png</file>
-    <file>icons/prop24.png</file>
-    <file>icons/properties24.png</file>
-    <file>icons/properties_24.png</file>
-    <file>icons/refresh.png</file>
-    <file>icons/refresh24.png</file>
-    <file>icons/register_db24.png</file>
-    <file>icons/relationType24.png</file>
-    <file>icons/remove24.png</file>
-    <file>icons/rename24.png</file>
-    <file>icons/reset24.png</file>
-    <file>icons/save24.png</file>
-    <file>icons/save_all24.png</file>
-    <file>icons/save_as24.png</file>
-    <file>icons/search24.png</file>
-    <file>icons/sql_execute24.png</file>
-    <file>icons/sql_scriptopen24.png</file>
-    <file>icons/user_add24.png</file>
-    <file>icons/verify_document_24.png</file>
-    <file>icons/views.png</file>
-    <file>icons/viewsmenu.png</file>
-    <file>icons/window_options24.png</file>
-    <file>icons/print16.png</file>
-    <file>icons/print24.png</file>
-    <file>icons/dataStore16.png</file>
-    <file>icons/dataType16.png</file>
+  	<file>../icons/audio_format16.png</file>
+  	<file>../icons/bin_format16.png</file>
+  	<file>../icons/doc_format16.png</file>
+  	<file>../icons/file_format16.png</file>
+  	<file>../icons/html_format16.png</file>
+  	<file>../icons/image_format16.png</file>
+  	<file>../icons/pdf_format16.png</file>
+  	<file>../icons/ppt_format16.png</file>
+  	<file>../icons/py_format16.png</file>
+  	<file>../icons/txt_format16.png</file>
+  	<file>../icons/video_format16.png</file>
+  	<file>../icons/vsd_format16.png</file>
+  	<file>../icons/xls_format16.png</file>
+  	<file>../icons/xml_format16.png</file>
+  	<file>../icons/zip_format16.png</file>
+  	<file>../icons/insert_doc24.png</file>
+  	<file>../icons/package24.png</file>
+    <file>../icons/link16.png</file>
+    <file>../icons/migrated16.png</file>
+    <file>../icons/cd16.png</file>
+    <file>../icons/cross16.png</file>
+    <file>../icons/archive16.png</file>
+    <file>../icons/DataStoreNew24.png</file>
+    <file>../icons/Documentation24.png</file>
+    <file>../icons/FlowSolution24.png</file>
+    <file>../icons/Geometry24.png</file>
+    <file>../icons/GridGeneration24.png</file>
+    <file>../icons/Input24.png</file>
+    <file>../icons/Mitarbeiter24.png</file>
+    <file>../icons/Output24.png</file>
+    <file>../icons/Planner24.png</file>
+    <file>../icons/Relation24.png</file>
+    <file>../icons/about24.png</file>
+    <file>../icons/back.png</file>
+    <file>../icons/backward.png</file>
+    <file>../icons/binoc24.png</file>
+    <file>../icons/close_file24.png</file>
+    <file>../icons/closewindow24.png</file>
+    <file>../icons/connect.png</file>
+    <file>../icons/connect24.png</file>
+    <file>../icons/console.png</file>
+    <file>../icons/copy24.png</file>
+    <file>../icons/cut.png</file>
+    <file>../icons/dataStore24.png</file>
+    <file>../icons/dataType24.png</file>
+    <file>../icons/datafinder24.png</file>
+    <file>../icons/delete24.png</file>
+    <file>../icons/directories24.png</file>
+    <file>../icons/disconnect.png</file>
+    <file>../icons/disconnect24.png</file>
+    <file>../icons/drop_db24.png</file>
+    <file>../icons/edit24.png</file>
+    <file>../icons/exit24.png</file>
+    <file>../icons/export24.png</file>
+    <file>../icons/flag24.png</file>
+    <file>../icons/forward.png</file>
+    <file>../icons/get24.png</file>
+    <file>../icons/graph_line_24.png</file>
+    <file>../icons/graph_point_24.png</file>
+    <file>../icons/hard_drive_24.png</file>
+    <file>../icons/help24.png</file>
+    <file>../icons/import24.png</file>
+    <file>../icons/insert24.png</file>
+    <file>../icons/key24.png</file>
+    <file>../icons/layer01.png</file>
+    <file>../icons/layer02.png</file>
+    <file>../icons/layer03.png</file>
+    <file>../icons/layer04.png</file>
+    <file>../icons/lightning_bolt24.png</file>
+    <file>../icons/lightning_bolt_24.png</file>
+    <file>../icons/mail24.png</file>
+    <file>../icons/mdi_cascade24.png</file>
+    <file>../icons/mdi_tilehztl24_h.png</file>
+    <file>../icons/mdi_tilevert24_h.png</file>
+    <file>../icons/monitor_24.png</file>
+    <file>../icons/new24.png</file>
+    <file>../icons/newDataStore24.png</file>
+    <file>../icons/newDataType24.png</file>
+    <file>../icons/newGroup24.png</file>
+    <file>../icons/newRelationType24.png</file>
+    <file>../icons/newUser24.png</file>
+    <file>../icons/newmenu.png</file>
+    <file>../icons/open24.png</file>
+    <file>../icons/paste.png</file>
+    <file>../icons/preferences24.png</file>
+    <file>../icons/procedure24.png</file>
+    <file>../icons/process24.png</file>
+    <file>../icons/prop24.png</file>
+    <file>../icons/properties24.png</file>
+    <file>../icons/properties_24.png</file>
+    <file>../icons/refresh.png</file>
+    <file>../icons/refresh24.png</file>
+    <file>../icons/register_db24.png</file>
+    <file>../icons/relationType24.png</file>
+    <file>../icons/remove24.png</file>
+    <file>../icons/rename24.png</file>
+    <file>../icons/reset24.png</file>
+    <file>../icons/save24.png</file>
+    <file>../icons/save_all24.png</file>
+    <file>../icons/save_as24.png</file>
+    <file>../icons/search24.png</file>
+    <file>../icons/sql_execute24.png</file>
+    <file>../icons/sql_scriptopen24.png</file>
+    <file>../icons/user_add24.png</file>
+    <file>../icons/verify_document_24.png</file>
+    <file>../icons/views.png</file>
+    <file>../icons/viewsmenu.png</file>
+    <file>../icons/window_options24.png</file>
+    <file>../icons/print16.png</file>
+    <file>../icons/print24.png</file>
+    <file>../icons/dataStore16.png</file>
+    <file>../icons/dataType16.png</file>
   </qresource>
   <qresource prefix="/images" >
-    <file>images/DF_Admin_About.png</file>
-    <file>images/DF_User_About.png</file>
-    <file>images/DF_User_Splash.png</file>
-    <file>images/DF_Logo_48x48.png</file>
-    <file>images/DF_Logo_50x50.png</file>
-    <file>images/DF_Logo_800x600.png</file>
-    <file>images/DF_Logo_klein.png</file>
-    <file>images/DF_Logo_klein_trans.png</file>
-    <file>images/DF_Logo_klein_transparent.png</file>
+    <file>../images/about_datafinder_user.png</file>
+    <file>../images/splash_datafinder_admin.png</file>
+    <file>../images/splash_datafinder_user.png</file>
+    <file>../images/DF_Logo_48x48.png</file>
+    <file>../images/DF_Logo_50x50.png</file>
+    <file>../images/DF_Logo_800x600.png</file>
+    <file>../images/DF_Logo_klein.png</file>
+    <file>../images/DF_Logo_klein_trans.png</file>
+    <file>../images/DF_Logo_klein_transparent.png</file>
   </qresource>
 </RCC>
